src/test/resources/syntax/invalid/group_definition_flag_invalid_data_type.unpick
unpick v3
group float g
    @flags